<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="about">About</string>
    <string name="about_app">Mentorship System is an application that matches people in tech to mentor
        each other, on career development, through 1:1 relations during a certain period of time.</string>
    <string name="accept">Accept</string>
    <string name="accepted">Accepted</string>
    <string name="accepted_requests">Accepted Requests</string>
    <string name="achievements">Achievements</string>
    <string name="activity_not_found_exception_error">Cannot Find an app that can open the Requested Link.</string>
    <string name="add_new_task">Add a new task</string>
    <string name="age">Age</string>
    <string name="all">All</string>
    <string name="app_name">AJARIN</string>
    <string name="apply_filter">Apply filter</string>
    <string name="available_to_be_mentor_mentee">Available to be a:</string>
    <string name="available_to_mentor">Available to mentor</string>
    <string name="available_to_mentor_and_mentee">Available to mentor and be a mentee</string>
    <string name="bio">Bio</string>
    <string name="both">Both</string>
    <string name="both_users_only_available_to_mentor">This request is not possible because both users are only ‘available to
        mentor\'</string>
    <string name="bug">Bug</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_relation_denied">No</string>
    <string name="cancel_relation_text">Are you sure you want to cancel the relation?</string>
    <string name="cancel_relation_title">Cancel Relation</string>
    <string name="cancelled">Cancelled</string>
    <string name="change_password">Change Password</string>
    <string name="char_error">Please don\'t exceed the character limit</string>
    <string name="clear_all">Clear all</string>
    <string name="code_of_conduct">Code of Conduct</string>
    <string name="completed">Completed</string>
    <string name="completed_relations">Completed Relations</string>
    <string name="confirm_cancel_relation">Yes</string>
    <string name="confirm_logout">Confirm logout</string>
    <string name="confirm_logout_msg">Are you sure you want to logout?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_task_success">Task created</string>
    <string name="current_new_password_should_not_same">Current and New passwords should not be same</string>
    <string name="current_password">Current Password</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="email_error">Email ID can\'t be left blank</string>
    <string name="empty_members_list">There are no other members.</string>
    <string name="empty_past_requests">You don\'t have any past mentorship requests</string>
    <string name="empty_pending_requests">You don\'t have any pending mentorship requests</string>
    <string name="empty_requests">You don\'t have any mentorship requests</string>
    <string name="end_date">End date</string>
    <string name="end_date_format">dd/mm/YYYY</string>
    <string name="end_date_label">End Date:</string>
    <string name="error_checkbox">Please choose at least one of the following options.\n You may change it
        later</string>
    <string name="error_empty_email">Email cannot be empty</string>
    <string name="error_empty_name">Name cannot be empty</string>
    <string name="error_empty_password">Password cannot be empty</string>
    <string name="error_empty_password_confirmation">Password confirmation cannot be empty</string>
    <string name="error_empty_username">Username/Email cannot be empty</string>
    <string name="error_filter_not_found">Oops! No member found</string>
    <string name="error_name_too_long">Name should have a maximum of %1$d characters</string>
    <string name="error_name_too_short">Name should have a minimum of %1$d characters</string>
    <string name="error_not_matching_passwords">Passwords didn\'t match!</string>
    <string name="error_password_too_weak">Your password is too weak! Use at least one small and capital letter, one
        number and one special sign!</string>
    <string name="error_username_too_short_or_long">Username must be 5 to 25 characters long</string>
    <string name="error_username_invalid">Username must contain only letters, numbers and underscores</string>
    <string name="error_name_too_short_or_long">Name must be 2 to 30 characters long</string>
    <string name="error_name_invalid">Name must contain only letters, hyphens and whitespaces</string>
    <string name="error_password_too_short_or_long">Password must be 8 to 64 characters long</string>
    <string name="error_please_check_internet">Please check your internet connection</string>
    <string name="error_request_timed_out">Request timed out</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="exit_toast">Press BACK again to exit</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_bug">Bug</string>
    <string name="feedback_category">Category</string>
    <string name="feedback_email">example@email.com</string>
    <string name="feedback_emailhint">Your email ID</string>
    <string name="feedback_experience">How was your experience?</string>
    <string name="feedback_feedbackmessagehint">Describe your experience here</string>
    <string name="feedback_feedbacktxt">Do you have a suggestion or want to report a bug?\nLet us know in the field
        below.</string>
    <string name="feedback_message">Message</string>
    <string name="feedback_sendfeedback">Send us your feedback!</string>
    <string name="feedback_sendfeedbackbtn">Send Feedback</string>
    <string name="feedback_suggestion">Suggestion</string>
    <string name="feedback_thank">Thank you for your feedback!</string>
    <string name="feeedback_others">Others</string>
    <string name="fetch_user_profile">Fetching user profile…</string>
    <string name="fetching_current_relation">Fetching Current Relation information…</string>
    <string name="fetching_requests">Fetching Requests</string>
    <string name="fetching_users">Fetching users…</string>
    <string name="filter">Filter</string>
    <string name="filter_by">Filter by</string>
    <string name="fragment_title_about">About</string>
    <string name="fragment_title_edit_profile">Edit Profile</string>
    <string name="fragment_title_home">Home</string>
    <string name="fragment_title_members">Members</string>
    <string name="fragment_title_profile">My Profile</string>
    <string name="fragment_title_relation">Current Relation</string>
    <string name="fragment_title_requests">Mentorship Requests</string>
    <string name="from">From</string>
    <string name="github_repository">Github Repository</string>
    <string name="i_will_be_a">I will be a …</string>
    <string name="input"> Please fill in the input fields and/or assign a rating</string>
    <string name="interests">Interests</string>
    <string name="intro_prefs">intro_prefs</string>
    <string name="intro_prefs_first_run">intro_prefs_key</string>
    <string name="location">Location</string>
    <string name="logging_in">Logging in…</string>
    <string name="logging_successful">Logging successful</string>
    <string name="login">Login</string>
    <string name="logo">Logo</string>
    <string name="logout">Logout</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
        laborum.</string>
    <string name="mark_task_message">Mark task as complete?</string>
    <string name="mark_task_success">Task marked as complete</string>
    <string name="mark_task_title">Mark task</string>
    <string name="member_profile">Member Profile</string>
    <string name="mentee">Mentee</string>
    <string name="mentor">Mentor</string>
    <string name="model_task_1">Add Projects section to CV</string>
    <string name="model_task_2">Prepare questions for Job Interview X</string>
    <string name="model_task_3">Share a Professional update on Twitter</string>
    <string name="msg_error">Message can\'t be left blank</string>
    <string name="name">Name</string>
    <string name="name_a_z">Name (A-Z)</string>
    <string name="name_z_a">Name (Z-A)</string>
    <string name="navigation_title_home">Home</string>
    <string name="navigation_title_members">Members</string>
    <string name="navigation_title_profile">Profile</string>
    <string name="navigation_title_relation">Relation</string>
    <string name="navigation_title_requests">Requests</string>
    <string name="need_mentoring">Need mentoring</string>
    <string name="new_password">New Password</string>
    <string name="no">No</string>
    <string name="no_achievements">No achievements</string>
    <string name="no_current_mentorship_relation">You are not in a current mentorship relation.</string>
    <string name="no_recent_achievements">No recent achievements</string>
    <string name="no_tasks">No tasks</string>
    <string name="not_available_to_mentor_or_mentee">Not available to be a mentor or a mentee</string>
    <string name="not_implemented">This feature is not implemented yet.</string>
    <string name="notes">Notes</string>
    <string name="notes_empty_error">Notes cannot be empty</string>
    <string name="occupation">Occupation</string>
    <string name="ok">OK</string>
    <string name="only_available_to_mentee">Only available to be a mentee</string>
    <string name="only_available_to_mentor">Only available to mentor</string>
    <string name="organization">Organization</string>
    <string name="our_github_link">Our Github Link</string>
    <string name="our_website">Our Website</string>
    <string name="page_1_description">A new way to boost your career</string>
    <string name="page_1_title">Welcome to Mentorship System!</string>
    <string name="page_2_description">Add relevant information so we can match you easier.</string>
    <string name="page_2_title">Your profile</string>
    <string name="page_3_description">Get in touch and pursue your skills</string>
    <string name="page_3_title">Become a mentee</string>
    <string name="page_4_description">Help others and develop yourself by sharing knowledge</string>
    <string name="page_4_title">Become a mentor</string>
    <string name="password">Password</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="password_updated">Password updated successfully!</string>
    <string name="past">Past</string>
    <string name="pending">Pending</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="popup_menu_about">About</string>
    <string name="popup_menu_delete_account">Delete my account</string>
    <string name="popup_menu_feedback">Feedback</string>
    <string name="popup_menu_logout">Logout</string>
    <string name="popup_menu_settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="recent_achievements">Recent Achievements</string>
    <string name="refresh">Refresh</string>
    <string name="registration_date">Registration date</string>
    <string name="registration_successful">Registration successful. Please confirm your email!</string>
    <string name="reject">Reject</string>
    <string name="rejected">Rejected</string>
    <string name="rejected_requests">Rejected Requests</string>
    <string name="relation_end_date_has_passed">The end date for this request has passed!</string>
    <string name="relation_state_message">This relation was %1$s!</string>
    <string name="relationpage_btntext">Find members</string>
    <string name="request_detail">Request Detail</string>
    <string name="request_direction_formatted">%1$s %2$s</string>
    <string name="request_sent_by_current_user_message">You want to be %1$s\'s %2$s until %3$s</string>
    <string name="request_sent_by_other_user_message">%1$s wants to be your %2$s until %3$s</string>
    <string name="same_request_already_sent">You have already sent a similar request to\u0020</string>
    <string name="save">Save</string>
    <string name="send_request">Send Request</string>
    <string name="settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="signing_up">Signing up…</string>
    <string name="skills">Skills</string>
    <string name="slack_username">Slack username</string>
    <string name="sort_by">Sort by</string>
    <string name="tasks">Tasks</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_and_conditions_acceptance_statement">
        By checking this box, I affirm that I have read and accept to be bound by the
        Code of Conduct, Terms, and Privacy Policy.
        Further, I consent to the use of my information for the stated purpose.
    </string>
    <string name="to">To</string>
    <string name="to_do">To do</string>
    <string name="transition_name">transition_name</string>
    <string name="transition_profile_img">transition_profile_img</string>
    <string name="update_profile">Update</string>
    <string name="update_successful">Update profile was successful!</string>
    <string name="updating_profile">Updating profile…</string>
    <string name="user_photo">User Photo</string>
    <string name="username">Username</string>
    <string name="username_or_email">Username or Email</string>
    <string name="valid_error">Please enter a valid email address</string>
    <string name="welcome">Welcome</string>
    <string name="yes">Yes</string>

</resources>